spade-tests/src/snapshots/spade_tests__parser__missing_pipeline_depth_error.snap
---
source: spade-tests/src/parser.rs
---
entity a() -> bool {
    inst() x()
}


error: Unexpected `)`, expected `type`
  ┌─ testinput:2:10
  │
2 │     inst() x()
  │          ^ expected `type`
